# nl2hdl

./: .gitignore  README.md  pyproject.toml
docs/: attention_kv_cache_fixture_contract.md  ddr_axi_board_shell_fixture_contract.md  decoder_block_attention_mlp_fixture_contract.md  decoder_block_axi_attention_mlp_fixture_contract.md  decoder_block_scaffold_contract.md  decoder_child_attention_datapath_contract.md  decoder_child_axi_attention_datapath_contract.md  decoder_child_datapath_scaffold_contract.md  framework_overview.md  gptq_dequant_kernel_contract.md  hdl_module_interface_contract.md  hdl_subagent_backlog.md  layer_fsm_attention_fixture_contract.md  layer_fsm_axi_attention_fixture_contract.md  layer_fsm_axi_decoder_block_fixture_contract.md  layer_fsm_decoder_block_fixture_contract.md  layer_fsm_fixture_contract.md  layer_top_fsm_agent_contract.md  model_fsm_axi_decoder_block_fixture_contract.md  packed_stream_adapter_kernel_contract.md  packed_stream_adapter_multiword_contract.md  project_skills.md  projection_adapter_stream_integration_contract.md  projection_axi_read_command_adapter_contract.md  projection_axi_read_data_channel_adapter_contract.md  projection_axi_read_transaction_adapter_contract.md  projection_axi_stream_integration_contract.md  projection_internal_stream_shell_contract.md  projection_memory_stream_boundary_contract.md  projection_parallel_streaming_kernel_contract.md  projection_streaming_kernel_contract.md  projection_tile_kernel_contract.md  residual_mlp_fixture_contract.md  rmsnorm_kernel_contract.md  rmsnorm_rope_source_path_contract.md  (+13 more)
(+801 files in other folders)
