[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nl2hdl"
version = "0.1.0"
description = "Agentic Hugging Face model to SystemVerilog accelerator generator"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "onnx",
  "PyYAML",
  "torch",
  "transformers",
]

[project.optional-dependencies]
test = ["pytest"]
llm = ["openai"]

[project.scripts]
nl2hdl = "nl2hdl.cli:main"

[tool.setuptools.packages.find]
include = ["nl2hdl*"]
